--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <!DOCTYPE html><!-- ✨ Built with Framer • https://www.framer.com/ --><html><head>
     <meta charset="utf-8">
     
