--- a/index.html
+++ b/index.html
@@ -6,28 +6,15 @@
     <title>Coming Soon</title>
     <style>
         body {
-            background-color: #97d3ff; /* Light blue background color */
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            background-image: url('coming_soon.jpg');
+            background-size: cover;
+            background-position: center;
             height: 100vh;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            text-align: center;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>COMING SOON</h1>
-        <img src="pipi_image.jpg" alt="Pipi Image">
-    </div>
 </body>
 </html>
