--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             background-position: center;
             height: 100vh;
         }
+
+        @media (max-width: 768px) {
+            body {
+                background-size: contain;
+            }
+        }
     </style>
 </head>
 <body>
