--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         @media (max-width: 768px) {
             body {
                 background-size: contain;
+                background-repeat: no-repeat;
             }
         }
     </style>
