--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
             background-size: cover;
             background-position: center;
             height: 100vh;
+            background-color: #97d3ff; /* Default background color */
         }
 
         @media (max-width: 768px) {
             body {
                 background-size: contain;
                 background-repeat: no-repeat;
+                background-color: #97d3ff; /* Background color for smaller screens */
             }
         }
     </style>
